# Narrative_Forge

./: .gitignore  NarrativeForge.spec  OPEN_SOURCE.md  README.md  WINDOWS_EXE.md
backend/: .env.example  desktop_launcher.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  chapters.py  characters.py  discussions.py  export.py  llm_config.py  outlines.py  projects.py  scenes.py  system_settings.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/llm/: json_mode.py  rate_limiter.py
backend/app/llm/prompts/: chapter.py  consistency.py  novel_polish.py  novel_write.py  outline.py  scene.py
backend/app/llm/providers/: anthropic.py  base.py  deepseek.py  google.py  openai.py  (+1 more)
backend/app/models/: __init__.py  analysis.py  base.py  chapter.py  character.py  discussion.py  llm_config.py  outline.py  project.py  scene.py  system_prompt_setting.py
backend/app/schemas/: analysis.py  chapter.py  character.py  discussion.py  export.py  llm_config.py  outline.py  project.py  scene.py  system_settings.py
backend/app/services/: chapter_service.py  character_service.py  consistency_service.py  discussion_service.py  export_service.py  llm_orchestrator.py  outline_service.py  project_service.py  scene_service.py  system_prompt_service.py
backend/tests/: test_api.py  test_characters.py  test_consistency_analysis.py  test_deepseek_provider.py  test_discussions.py  test_model_providers.py  test_novel_write_context.py  test_outlines_nested.py  test_scenes.py
(+42 files in other folders)
